--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -8,6 +10,13 @@
   height: 100vh;
 }
 
+.goHome {
+  position: fixed;
+  top: 0.5rem;
+  left: 1rem;
+  display: flex;
+  align-items: center;
+}
 .main {
   padding: 5rem 0;
   flex: 1;
@@ -33,33 +42,6 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
 .code {
   background: #fafafa;
   border-radius: 5px;
@@ -78,6 +60,25 @@
   margin-top: 3rem;
 }
 
+.button {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 3px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: variables.$blue-color;
+    border-color: variables.$blue-color;
+    cursor: pointer;
+  }
+}
+
 .card {
   margin: 1rem;
   padding: 1.5rem;
@@ -88,29 +89,24 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   width: 45%;
-}
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
+  &:hover,
+  &:focus,
+  &:active {
+    color: variables.$blue-color;
+    border-color: variables.$blue-color;
+  }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
+  h2 {
+    margin: 0 0 1rem 0;
+    font-size: 1.5rem;
+  }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  p {
+    margin: 0;
+    font-size: 1.25rem;
+    line-height: 1.5;
+  }
 }
 
 @media (max-width: 600px) {
