--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -16,6 +16,10 @@
   left: 1rem;
   display: flex;
   align-items: center;
+  img {
+    width: 36px;
+    height: 40px;
+  }
 }
 .main {
   padding: 5rem 0;
