--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -32,18 +32,19 @@
 
 .footer {
   width: 100%;
-  height: 100px;
+  height: 2rem;
   border-top: 1px solid #eaeaea;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  .footerContent {
+    opacity: 60%;
+    font-size: 0.8rem;
+    a {
+      color: #555555;
+    }
+  }
 }
 
 .code {
