--- a/styles/Chords.module.scss
+++ b/styles/Chords.module.scss
@@ -1,9 +1,12 @@
+@use 'variables';
+
 .chordName {
-  font-size: 5rem;
+  font-size: 8rem;
 }
 .chordTones {
   display: flex;
   align-items: center;
+  color: variables.$blue-color;
   .tone {
     margin: 0.5em;
   }
